--- a/ci/linux-x86_64.yml
+++ b/ci/linux-x86_64.yml
@@ -9,6 +9,7 @@ linux-x86_64:build-appimage:
   extends:
     - .linux-x86_64
   after_script:
+    - mv build/green .
     - tools/appimage.sh $CI_PROJECT_DIR
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
@@ -19,6 +20,8 @@ linux-x86_64:build-appimage:
 linux-x86_64:build-binary:
   extends:
     - .linux-x86_64
+  after_script:
+    - mv build/green .
   variables:
     GREEN_WAYLAND: "ON"
   artifacts:
