--- a/ci/macos-arm64.yml
+++ b/ci/macos-arm64.yml
@@ -25,7 +25,7 @@ macos-arm64:build:
   needs: ["macos-arm64:depends"]
   after_script:
     - mkdir macos-arm64
-    - mv "Blockstream Green.app" macos-arm64
+    - mv build/"Blockstream Green.app" macos-arm64
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 1 week
