--- a/ci/macos-x86_64.yml
+++ b/ci/macos-x86_64.yml
@@ -25,7 +25,7 @@ macos-x86_64:build:
   needs: ["macos-x86_64:depends"]
   after_script:
     - mkdir macos-x86_64
-    - mv "Blockstream Green.app" macos-x86_64
+    - mv build/"Blockstream Green.app" macos-x86_64
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 1 week
