--- a/ci/windows-x86_64/Dockerfile
+++ b/ci/windows-x86_64/Dockerfile
@@ -51,6 +51,10 @@ COPY --from=uasm /usr/bin/uasm /usr/bin
 COPY tools/buildcrashpad.sh tools/
 RUN tools/buildcrashpad.sh
 
+FROM base AS breakpad
+COPY tools/buildbreakpad.sh tools/
+RUN tools/buildbreakpad.sh
+
 FROM base
 COPY --from=hidapi /depends /depends
 COPY --from=countly /depends /depends
@@ -59,3 +63,4 @@ COPY --from=gdk /depends /depends
 COPY --from=kdsa /depends /depends
 COPY --from=libserialport /depends /depends
 COPY --from=crashpad /depends /depends
+COPY --from=breakpad /depends /depends
