--- a/ci/windows-x86_64/Dockerfile
+++ b/ci/windows-x86_64/Dockerfile
@@ -55,6 +55,11 @@ FROM base AS breakpad
 COPY tools/buildbreakpad.sh tools/
 RUN tools/buildbreakpad.sh
 
+FROM base AS gpgme
+RUN apt install -y gettext
+COPY tools/buildgpgme.sh tools/
+RUN tools/buildgpgme.sh
+
 FROM base
 COPY --from=hidapi /depends /depends
 COPY --from=countly /depends /depends
@@ -64,3 +69,4 @@ COPY --from=kdsa /depends /depends
 COPY --from=libserialport /depends /depends
 COPY --from=crashpad /depends /depends
 COPY --from=breakpad /depends /depends
+COPY --from=gpgme /depends /depends
