--- a/ci/windows-x86_64.yml
+++ b/ci/windows-x86_64.yml
@@ -43,6 +43,7 @@ windows-x86_64:build:
 windows-x86_64:sign:
   extends: .windows:sign
   stage: staple
+  when: manual
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 1 week
@@ -76,6 +77,7 @@ windows-x86_64:installer:
 windows-x86_64:sign-installer:
   extends: .windows:sign
   stage: installer
+  when: manual
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 1 week
