--- a/ci/linux-x86_64.yml
+++ b/ci/linux-x86_64.yml
@@ -9,23 +9,23 @@ linux-x86_64:build-appimage:
   extends:
     - .linux-x86_64
   after_script:
-    - mv build/green .
+    - mv build/blockstream .
     - tools/appimage.sh $CI_PROJECT_DIR
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 1 week
     paths:
-      - BlockstreamGreen-x86_64.AppImage
+      - Blockstream-x86_64.AppImage
 
 linux-x86_64:build-binary:
   extends:
     - .linux-x86_64
   after_script:
-    - mv build/green .
+    - mv build/blockstream .
   variables:
     GREEN_WAYLAND: "ON"
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 1 week
     paths:
-      - green
+      - blockstream
