--- a/ci/macos-universal.yml
+++ b/ci/macos-universal.yml
@@ -6,12 +6,12 @@ macos-universal:build:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 1 week
     paths:
-      - "macos-universal/Blockstream Green.app"
+      - "macos-universal/Blockstream.app"
   needs: ["macos-arm64:build", "macos-x86_64:build"]
   script:
     - mkdir macos-universal
-    - cp -R "macos-x86_64/Blockstream Green.app" macos-universal/
-    - lipo -create -output "macos-universal/Blockstream Green.app/Contents/MacOS/Blockstream Green" "macos-arm64/Blockstream Green.app/Contents/MacOS/Blockstream Green" "macos-x86_64/Blockstream Green.app/Contents/MacOS/Blockstream Green"
+    - cp -R "macos-x86_64/Blockstream.app" macos-universal/
+    - lipo -create -output "macos-universal/Blockstream.app/Contents/MacOS/Blockstream" "macos-arm64/Blockstream.app/Contents/MacOS/Blockstream" "macos-x86_64/Blockstream.app/Contents/MacOS/Blockstream"
 
 macos-universal:staple:
   tags:
@@ -22,12 +22,12 @@ macos-universal:staple:
     expire_in: 1 week
     when: always
     paths:
-      - "macos-universal/Blockstream Green.app"
-      - "macos-universal/Blockstream Green.dmg"
+      - "macos-universal/Blockstream.app"
+      - "macos-universal/Blockstream.dmg"
   needs: ["macos-universal:build"]
   script:
-    - mv "macos-universal/Blockstream Green.app" "Blockstream Green.app"
-    - tools/macos-staple.sh "Blockstream Green.app"
-    - tools/packdmg.sh "Blockstream Green.app"
-    - tools/macos-staple.sh "Blockstream Green.dmg"
-    - mv "Blockstream Green.app" "Blockstream Green.dmg" macos-universal/
+    - mv "macos-universal/Blockstream.app" "Blockstream.app"
+    - tools/macos-staple.sh "Blockstream.app"
+    - tools/packdmg.sh "Blockstream.app"
+    - tools/macos-staple.sh "Blockstream.dmg"
+    - mv "Blockstream.app" "Blockstream.dmg" macos-universal/
