--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,7 @@ include:
   - local: "ci/docker.yaml"
   - local: "ci/lint.yml"
   - local: "ci/linux-x86_64.yml"
+  - local: "ci/linux-x86_64-shared.yml"
   - local: "ci/windows-x86_64.yml"
   - local: "ci/macos-arm64.yml"
   - local: "ci/macos-arm64-shared.yml"
