--- a/ci/docker.yaml
+++ b/ci/docker.yaml
@@ -70,6 +70,13 @@ build_linux-x86_64:
     IMAGE: $CI_REGISTRY_IMAGE/linux-x86_64
     DOCKER_BUILD_CONTEXT: ci/linux-x86_64
 
+build_linux-x86_64-shared:
+  extends: .docker_build
+  variables:
+    IMAGE: $CI_REGISTRY_IMAGE/linux-x86_64-shared
+    DOCKER_BUILD_CONTEXT: ci/linux-x86_64-shared
+    DOCKER_BUILD_ARGS: --build-arg QT_INSTALLER_JWT_TOKEN=${QT_INSTALLER_JWT_TOKEN}
+
 build_windows-x86_64:
   extends: .docker_build
   variables:
