--- a/entitlements.plist
+++ b/entitlements.plist
@@ -4,5 +4,9 @@
 <dict>
   <key>com.apple.security.device.camera</key><true/>
   <key>com.apple.security.device.microphone</key><false/>
+  <key>com.apple.security.cs.allow-unsigned-executable-memory</key><true/>
+  <key>com.apple.security.cs.disable-library-validation</key><true/>
+  <key>com.apple.security.cs.allow-jit</key><true/>
+  <key>com.apple.security.cs.disable-executable-page-protection</key><true/>
 </dict>
 </plist>
