--- a/entitlements_debug.plist
+++ b/entitlements_debug.plist
@@ -5,6 +5,9 @@
   <key>com.apple.security.device.camera</key><true/>
   <key>com.apple.security.device.microphone</key><false/>
   <key>com.apple.security.get-task-allow</key><true/>
+  <key>com.apple.security.cs.allow-jit</key><true/>
+  <key>com.apple.security.cs.allow-unsigned-executable-memory</key><true/>
+  <key>com.apple.security.cs.disable-executable-page-protection</key><true/>
   <key>com.apple.security.cs.disable-library-validation</key><true/>
 </dict>
 </plist>
