--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,11 +69,12 @@ include:
   - local: "ci/lint.yml"
   - local: "ci/linux-x86_64.yml"
   - local: "ci/linux-x86_64-shared.yml"
-  - local: "ci/windows-x86_64.yml"
   - local: "ci/macos-arm64.yml"
   - local: "ci/macos-arm64-shared.yml"
   - local: "ci/macos-x86_64.yml"
   - local: "ci/macos-universal.yml"
+  - local: "ci/windows-x86_64.yml"
+  - local: "ci/windows-x86_64-shared.yml"
   - local: "ci/package.yml"
   - template: Jobs/SAST.gitlab-ci.yml
   - template: Jobs/Secret-Detection.gitlab-ci.yml
